--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -1,12 +1,29 @@
 .Card {
   font-size: 9px;
   flex-grow: 1;
+  width: 60px;
+  height: 80px;
+  padding: 2px;
+  margin: 2px;
   
   img {
-    width: 60px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .blank {
+    width: 100%;
+    height: 100%;
+    background-color: hsl(0,0,15%);
+  }
+
+  &.selected {
+    // animate selection
+  }
+
+  &:hover {
+    border: 2px;
+    background-color: #63DFFF;
   }
 }
 
-.Card:hover {
-  background-color: hsl(0,0, 90%);
-}
