--- a/src/styles/Board.scss
+++ b/src/styles/Board.scss
@@ -1,9 +1,12 @@
 .Board {
+  margin: 5px auto;
+  max-width: 1200px;
   display: flex;
   flex-direction: column;
 
   .row {
     display: flex;
     flex-grow: 1;
+    justify-content: space-evenly;
   }
 }
